# Pycheckem

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/actions/pycheckem-guard/: action.yml
.github/workflows/: ci.yml  pycheckem-diff.yml
docs/: github-actions.md
integrations/claude-code/.claude/commands/: check-env.md  snapshot-env.md
integrations/cursor/: .cursorrules
pycheckem/: __init__.py  __main__.py  cli.py  config.py  diff.py  history.py  parsers.py  plugins.py  pytest_plugin.py  remote.py  snapshot.py  suppression.py  types.py  verify.py
pycheckem-mcp/: README.md  pyproject.toml
pycheckem-mcp/pycheckem_mcp/: __init__.py  server.py
pycheckem/collectors/: __init__.py  config_files.py  env_vars.py  native_libs.py  os_info.py  packages.py  paths.py  project.py  python_info.py
pycheckem/render/: __init__.py  ascii.py  json.py  rich.py  side_by_side.py
tests/: conftest.py  test_cli.py  test_cli_compare.py  test_cli_diff.py  test_cli_guard.py  test_cli_history.py  test_cli_snapshot.py  test_cli_verify.py  test_config.py  test_config_files.py  test_diff.py  test_env_vars.py  test_history.py  test_native_lib_diff.py  test_native_libs.py  test_os_info.py  test_packages.py  test_packaging.py  test_parsers.py  test_paths.py  test_plugins.py  test_project.py  test_python_info.py  test_remote.py  test_render_ascii.py  test_render_json.py  test_render_rich.py  test_render_sbs.py  test_snapshot.py  test_suppression.py  test_types.py  test_verify.py  test_version.py
