[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycheckem"
version = "0.3.1"
description = "Snapshot and diff Python runtime environments — catch package, config, and OS mismatches across dev, staging, prod, and containers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    { name = "marci" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
pretty = ["rich>=13.0"]
toml = ["tomli>=2.0; python_version < '3.11'"]
dev = ["pytest>=7.0", "tomli>=2.0; python_version < '3.11'"]

[project.scripts]
pycheckem = "pycheckem.cli:main"

[project.urls]
Homepage = "https://github.com/MateuszMarciszewski/Pycheckem"
Repository = "https://github.com/MateuszMarciszewski/Pycheckem"
Issues = "https://github.com/MateuszMarciszewski/Pycheckem/issues"

[tool.setuptools.packages.find]
include = ["pycheckem*"]
