[build-system]
requires = ["setuptools>=64,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycheckem"
version = "0.4.0"
description = "Snapshot and diff Python runtime environments — catch package, config, and OS mismatches across dev, staging, prod, and containers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    { name = "marci" },
]
keywords = [
    "environment",
    "parity",
    "dependency",
    "compare",
    "diff",
    "snapshot",
    "drift",
    "requirements",
    "devops",
    "ci",
    "deployment",
    "validation",
    "packages",
    "versions",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.optional-dependencies]
pretty = ["rich>=13.0"]
toml = ["tomli>=2.0; python_version < '3.11'"]
dev = ["pytest>=7.0", "tomli>=2.0; python_version < '3.11'"]

[project.scripts]
pycheckem = "pycheckem.cli:main"

[project.urls]
Homepage = "https://github.com/MateuszMarciszewski/Pycheckem"
Documentation = "https://github.com/MateuszMarciszewski/Pycheckem#readme"
Repository = "https://github.com/MateuszMarciszewski/Pycheckem"
Changelog = "https://github.com/MateuszMarciszewski/Pycheckem/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/MateuszMarciszewski/Pycheckem/issues"

[project.entry-points.pytest11]
pycheckem = "pycheckem.pytest_plugin"

[tool.setuptools.packages.find]
include = ["pycheckem*"]
